--- a/Customer Lifetime Value Prediction.ipynb
+++ b/Customer Lifetime Value Prediction.ipynb
@@ -2727,7 +2727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "p-value < 0.05 to reject H0"
+    "p-value > 0.05 to reject H0"
    ]
   },
   {
@@ -3119,6 +3119,13 @@
    "source": [
     "p-value < 0.05 reject H0, Number of Policies can be significant in predicting CLV"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
